<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Meme Maker</string>
    <string name="takePic">Take Picture</string>
    <string name="action_settings">Settings</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="save">Save Picture</string>
    <string name="fingerpaint">Finger Paint</string>
    <string name="embedText">Embed Text</string>
</resources>
