<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".SelfieSketch">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/takePic"
        android:id="@+id/btnTakePic"
        android:onClick="onTakePicBtnClick"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prev"
        android:id="@+id/btnPrev"
        android:layout_alignBottom="@+id/btnTakePic"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onPrevBtnClick" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:id="@+id/btnNext"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="onNextBtnClick"
        android:layout_marginRight="5dp" />

    <basheer.mad_a2.DrawingView
        android:id="@+id/drawing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFFFF"
        android:layout_below="@+id/btnTakePic"
        android:alpha="1"
        android:layout_above="@+id/btnSave"
        android:layout_toLeftOf="@+id/btnNext"
        android:layout_toStartOf="@+id/btnNext" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/btnSave"
        android:onClick="onSaveBtnClick"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
         />

    <RadioGroup android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:id="@+id/radioGroup">

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/embedText"
        android:id="@+id/rbEmbedText"
         />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fingerpaint"
        android:id="@+id/rbFingerPaint"
         />

    </RadioGroup>

</RelativeLayout>
